# routes/logs.js
@@ -11,11 +11,16 @@ router.get('/',
     validatorHandler(logFromUserPet, 'params'),
     async (req, res, next) => {
     // #swagger.tags = ['Logs']
-    // #swagger.summary = 'Get a list of logs from a user's pet
+    // #swagger.summary = 'Get a list of logs from the current user's pet'
+    /* #swagger.security = [{
+               "bearerAuth": []
+    }] */
     try {
-        const { userId, petId } = req.params;
+        const { petId } = req.params;
 
-        const result = await service.find(userId, petId);
+        const user = req.user;
+
+        const result = await service.find(user.sub, petId);
 
         res.status(200).json(result);
     }
@@ -28,11 +33,16 @@ router.get('/:logId',
     validatorHandler(getLogSchema, 'params'),
     async (req, res, next) => {
     // #swagger.tags = ['Logs']
-    // #swagger.summary = 'Get a log item
+    // #swagger.summary = 'Get a log item from the current user's pet'
+    /* #swagger.security = [{
+               "bearerAuth": []
+    }] */
     try {
-        const { userId, petId, logId } = req.params;
+        const { petId, logId } = req.params;
 
-        result = await service.findOne(userId, petId, logId);
+        const user = req.user;
+
+        result = await service.findOne(user.sub, petId, logId);
 
         res.status(200).json(result);
     }
@@ -46,13 +56,18 @@ router.post('/',
     validatorHandler(createLogSchema, 'body'),
     async (req, res, next) => {
     // #swagger.tags = ['Logs']
-    // #swagger.summary = 'Create a log item for a user's pet
+    // #swagger.summary = 'Create a log item for the current user's pet'
+    /* #swagger.security = [{
+               "bearerAuth": []
+    }] */
     try {
-        const { userId, petId } = req.params;
+        const { petId } = req.params;
+
+        const user = req.user;
 
         const data = req.body;
 
-        const result = await service.create(userId, petId, data);
+        const result = await service.create(user.sub, petId, data);
 
         res.status(200).json(result);
     }
@@ -66,12 +81,18 @@ router.patch('/:logId',
     validatorHandler(updateLogSchema, 'body'),
     async (req, res, next) => {
     // #swagger.tags = ['Logs']
-    // #swagger.summary = 'Update a log item
+    // #swagger.summary = 'Update a log item from the current user's pet'
+    /* #swagger.security = [{
+               "bearerAuth": []
+    }] */
     try {
-        const { userId, petId, logId } = req.params;
+        const { petId, logId } = req.params;
+
+        const user = req.user;
+
         const data = req.body;
 
-        const result = await service.update(userId, petId, logId, data);
+        const result = await service.update(user.sub, petId, logId, data);
 
         res.status(200).json(result);
     }
@@ -84,11 +105,16 @@ router.delete('/:logId',
     validatorHandler(getLogSchema, 'params'),
     async (req, res, next) => {
     // #swagger.tags = ['Logs']
-    // #swagger.summary = 'Delete a log item
+    // #swagger.summary = 'Delete a log item from the current user's pet'
+    /* #swagger.security = [{
+               "bearerAuth": []
+    }] */
     try {
-        const { userId, petId, logId } = req.params;
+        const { petId, logId } = req.params;
 
-        const result = await service.delete(userId, petId, logId);
+        const user = req.user;
+
+        const result = await service.delete(user.sub, petId, logId);
 
         res.status(200).json(result);
     }
