# routes/tags.js
@@ -11,11 +11,14 @@ const router = express.Router({mergeParams: true});
 
 router.get('/', async (req, res, next) => {
     // #swagger.tags = ['Tags']
-    // #swagger.summary = 'Get a list of tags from a user'
+    // #swagger.summary = 'Get a list of tags from the current user'
+    /* #swagger.security = [{
+               "bearerAuth": []
+    }] */
     try{
-    	const { userId } = req.params;
+    	const user = req.user;
     	
-        const result = await service.find(userId);
+        const result = await service.find(user.sub);
 
         res.status(200).json(result);
     }
@@ -28,11 +31,16 @@ router.get('/:tagId',
     validatorHandler(getTagSchema, 'params'),
     async (req, res, next) => {
     // #swagger.tags = ['Tags']
-    // #swagger.summary = 'Get one tag from a user'
+    // #swagger.summary = 'Get one tag from the current user'
+    /* #swagger.security = [{
+               "bearerAuth": []
+    }] */
 	try {
-		const { userId, tagId } = req.params;
+		const { tagId } = req.params;
+
+        const user = req.user;
 	
-	    result = await service.findOne(userId, tagId);
+	    result = await service.findOne(user.sub, tagId);
 
         res.status(200).json(result);
 	}
@@ -45,13 +53,16 @@ router.post('/',
     validatorHandler(createTagSchema, 'body'),
     async (req, res, next) => {
     // #swagger.tags = ['Tags']
-    // #swagger.summary = 'Create a tag for a user'
+    // #swagger.summary = 'Create a tag for the current user'
+    /* #swagger.security = [{
+               "bearerAuth": []
+    }] */
 	try {
-		const { userId } = req.params;
+		const user = req.user;
 
         const data = req.body;
 
-        const result = await service.create(data, userId);
+        const result = await service.create(data, user.sub);
 
     	res.status(200).json(result);
 	}
@@ -65,13 +76,18 @@ router.patch('/:tagId',
     validatorHandler(updateTagSchema, 'body'),
     async (req, res, next) => {
     // #swagger.tags = ['Tags']
-    // #swagger.summary = 'Update a tag from a user'
+    // #swagger.summary = 'Update a tag from the current user'
+    /* #swagger.security = [{
+               "bearerAuth": []
+    }] */
 	try {
-		const { userId, tagId } = req.params;
+		const { tagId } = req.params;
+
+        const user = req.user;
 
         const data = req.body;
 
-        const result = await service.update(userId, tagId, data);
+        const result = await service.update(user.sub, tagId, data);
 
         res.status(200).json(result);
 	}
@@ -84,11 +100,16 @@ router.delete('/:tagId',
     validatorHandler(getTagSchema, 'params'),
     async (req, res, next) => {
     // #swagger.tags = ['Tags']
-    // #swagger.summary = 'Delete a tag from a user'
+    // #swagger.summary = 'Delete a tag from the current user'
+    /* #swagger.security = [{
+               "bearerAuth": []
+    }] */
     try{
-    	const { userId, tagId } = req.params;
+    	const { tagId } = req.params;
 
-        const result = await service.delete(userId, tagId);
+        const user = req.user;
+
+        const result = await service.delete(user.sub, tagId);
 
         res.status(200).json(result);
     }
